# OpenCLDecompiler

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  parser_for_instructions.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  main.yml  test.yml  test_linux.yml
base/models/functions/: block.py  config.py
experiments/: program.asm  program_1.asm  train.asm  train_OpenCL.txt
parsers/asm_parser/amdgpu_dis_format/: __init__.py  parser.py
parsers/base/: __init__.py  and_parser.py  any_parser.py  base_parser.py  ignore_parser.py  line_parser.py  one_or_more_parser.py  one_or_zero_parser.py  or_parser.py  parse_until_parser.py  parser_element_parser.py  zero_or_more_parser.py
parsers/models/: __init__.py  model.py
parsers/models/functions/: block.py  config.py
parsers/parse_objects/base/: __init__.py  dict_parse_object.py  list_parse_object.py  parse_object.py  string_parse_object.py
src/: base_instruction.py  cfg.py  code_printer.py  combined_register_content.py  config.py  constants.py  decompiler.py  decompiler_data.py  flag_type.py  global_data.py  instruction_dict.py  integrity.py  kernel_params.py  logical_variable.py  node.py  node_processor.py  node_region_type.py  opencl_types.py  operation_register.py  operation_register_content.py  operation_status.py  parser_for_instructions.py  region.py  region_type.py  register.py  register_content.py  register_content_combiner.py  register_type.py  register_value.py  state.py  sum_register.py  type_of_flag.py  type_of_node.py  type_of_reg.py  unrolled_loops_processing.py  upload.py  versions.py
src/base/: types.py
src/config_handler/: __init__.py  amdcl2_handler.py  handler.py  rocm_handler.py  unknown_handler.py
src/ds/: ds_add.py  ds_bpermute.py  ds_read.py  ds_read2.py  ds_write.py  ds_write2.py
src/exceptions/: __init__.py  common.py
src/experiments/: OpenCL.txt  OpenCL_1.txt  OpenCL_2.txt  train.asm  train_OpenCL.txt
src/experiments/first_steps/: program.asm  program_1.asm
src/expression_manager/: expression_helper_functions.py  expression_manager.py  expression_node.py  expression_optimizations.py  helper_functions.py  optimizations.py
src/expression_manager/types/: asm_types.py  base_type.py  opencl_types.py
src/expression_tree/: expression_node.py
src/flat/: flat_atomic_add.py  flat_load.py  flat_store.py  flat_store_dword.py  flat_store_dwordx2.py  flat_store_dwordx4.py  global_load.py  global_store.py
src/graph/: __init__.py  common.py
src/graph/control_flow_graph/: __init__.py  constants.py  control_flow_graph.py
src/instructions/: endpgm.py  label.py
src/instructions/IRspecial/: InitReg.py  LocalMem.py  memory.py
src/instructions/ds/: ds_add.py  ds_bpermute.py  ds_read.py  ds_read2.py  ds_write.py  ds_write2.py
src/instructions/flat/: flat_atomic_add.py  flat_load.py  flat_store.py  global_load.py  global_store.py
src/instructions/ir_special/: change_mask.py  global_mem.py  init_pred.py  init_reg.py  local_mem.py  memory.py
src/instructions/smem/: s_load.py
src/instructions/sop1/: s_and_saveexec.py  s_getpc.py  s_mov.py  s_not.py  s_or_saveexec.py  s_setpc.py  s_sext.py  s_swappc.py
src/instructions/sop2/: s_add.py  s_addc.py  s_and.py  s_andn2.py  s_ashr.py  s_bfe.py  s_cselect.py  s_lshl.py  s_lshr.py  s_min.py  s_mul.py  s_or.py  s_sub.py  s_xor.py
src/instructions/sopc/: __init__.py  s_cmp.py  s_cmp_eq.py  s_cmp_ge.py  s_cmp_gt.py  s_cmp_le.py  s_cmp_lg.py  s_cmp_lt.py
src/instructions/sopk/: s_addk.py  s_cmpk_lg.py  s_movk.py  s_mulk.py  s_setreg.py
src/instructions/sopp/: s_barrier.py  s_branch.py  s_cbranch.py  s_cbranch_execz.py  s_cbranch_scc0.py  s_cbranch_scc1.py  s_cbranch_vccnz.py  s_cbranch_vccz.py  s_clause.py  s_delay_alu.py  s_endpgm.py  s_nop.py  s_sendmsg.py  s_waitcnt.py
src/instructions/vop1/: v_cvt.py  v_mov.py  v_rcp_iflag.py
src/ir/: TemporaryVariableAllocator.py  asm_to_ir.py  kernel.py  kernel_components.py  temporary_variable_allocator.py
src/ir/passes/: base.py  (+1 more)
src/kernel_parser/: __init__.py  _amdcl2_parser.py  amdcl2_parser.py  amdgpu_dis_parser.py  parser.py  ptx_parser.py  rocm_parser.py  unknown_parser.py
src/model/: __init__.py  config_data.py  global_data.py  kernel_argument.py  preloaded_registers.py
src/regions/: functions_for_regions.py  region.py
src/smem/: s_load.py
src/sop1/: s_and_saveexec.py  s_getpc.py  s_mov.py  s_not.py  s_setpc.py  s_swappc.py
src/sop2/: s_add.py  s_addc.py  s_and.py  s_andn2.py  s_ashr.py  s_bfe.py  s_cselect.py  s_lshl.py  s_lshr.py  s_min.py  s_mul.py  s_or.py  s_sub.py
src/sopc/: s_cmp_eq.py  s_cmp_ge.py  s_cmp_gt.py  s_cmp_lt.py  s_set_gpr_idx_on.py
src/sopk/: s_movk.py  s_mulk.py  s_setreg.py
src/sopp/: s_barrier.py  s_branch.py  s_cbranch.py  s_cbranch_execz.py  s_cbranch_scc0.py  s_cbranch_scc1.py  s_cbranch_vccnz.py  s_cbranch_vccz.py  s_endpgm.py  s_nop.py  s_set_gpr_idx_off.py  s_waitcnt.py
src/types/: asm_types.py  base_type.py  opencl_types.py
src/utils/: __init__.py  config_data.py  driver_format.py  global_context.py  hex.py  hex_num_utils.py  kernel_argument.py  operation_register_content.py  singleton.py  uuid.py
src/vop1/: v_cvt.py  v_floor.py  v_mov.py  v_trunc.py
src/vop2/: v_add.py  v_addc.py  v_and.py  v_ashrrev.py  v_cndmask.py  v_lshlrev.py  v_lshrrev.py  v_mac.py  v_min.py  v_mul_f32.py  v_sub.py  v_subrev.py  v_xor.py
src/vop3/: v_alignbit.py  v_alignbyte.py  v_and_or.py  v_bfi.py  v_div_fixup.py  v_fma.py  v_ldexp.py  v_mul_f64.py  v_mul_lo.py
src/vopc/: v_cmp_eq.py  v_cmp_ge.py  v_cmp_gt.py  v_cmp_lg.py  v_cmp_lt.py  v_cmpx_class.py  v_cmpx_eq.py  v_cmpx_le.py
test/: test.bat  tests.py
tests/: branching_kernels_test.py  clrxdisasm  conftest.py  decompiler_test.py  different_flags_test.py  different_types_test.py  disasm.py  global_data_usage_test.py  linear_kernels_test.py  local_memory_kernels_test.py  loops_kernels_test.py  real_kernels_test.py  test_kernels.py  tests.py  tests_test.py  unused_params_test.py  vector_type_params_test.py
tmp_test/: input_file.asm  input_file.ptx  output_file.cl
(+869 files in other folders)
